code/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: backend.tcc-pucminas.com
    http:
      paths:
      - path:
        backend:
          serviceName: backend-service
          servicePort: 80
  - host: frontend.tcc-pucminas.com
    http:
      paths:
      - path:
        backend:
          serviceName: frontend-service
          servicePort: 80
  - host: viewmap.tcc-pucminas.com
    http:
      paths:
      - path:
        backend:
          serviceName: viewmap-service
          servicePort: 80
  - host: rabbit.tcc-pucminas.com
    http:
      paths:
      - path:
        backend:
          serviceName: definition
          servicePort: 15672
  - host: integracao.tcc-pucminas.com
    http:
      paths:
      - path: /rabbit/.*
        backend:
          serviceName: rabbit-mq-message
          servicePort: 80
      - path: /servicos/iptu/.*
        backend:
          serviceName: servicos
          servicePort: 80
      - path: /servicos/stur/.*
        backend:
          serviceName: stur
          servicePort: 80
  - host: mock.tcc-pucminas.com
    http:
      paths:
      - path:
        backend:
          serviceName: castlemock-service
          servicePort: 80
